feat: Implement core data querying, visualization, and reporting features with new UI components, database schema, routing, and documentation.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -37,6 +37,7 @@
         "database_status": "Datenbank-Status",
         "system_status": "System-Status",
         "records_count": "{{count}}k Datensätze",
+        "reports": "Berichtspakete",
         "about": "Über"
     },
     "dashboard": {
@@ -57,7 +58,15 @@
         "delete_confirm": "Dashboard löschen?",
         "empty_msg": "\"{{name}}\" ist noch leer",
         "empty_hint": "Füge Kacheln hinzu, um dieses Dashboard anzupassen.",
-        "confirm_delete_report": "Diesen Bericht wirklich löschen?",
+        "confirm_delete_report": "Möchten Sie diesen Bericht wirklich vom Dashboard entfernen?",
+        "filters_title": "Globale Dashboard-Filter",
+        "filters_subtitle": "Filter, die alle Dashboard-Grafiken gleichzeitig beeinflussen.",
+        "add_filter": "Filter hinzufügen",
+        "filter_column": "Spalte...",
+        "filter_value": "Wert...",
+        "no_filters": "Keine aktiven Filter. Klicke auf 'Filter hinzufügen', um das Dashboard einzuschränken.",
+        "op_contains": "enthält",
+        "op_is_null": "ist leer",
         "pin_sidebar": "Zum Menü hinzufügen",
         "unpin_sidebar": "Vom Menü entfernen",
         "active": "Aktiv",
@@ -111,6 +120,10 @@
         "line": "Linie",
         "area": "Fläche",
         "pie": "Kreis",
+        "kpi": "Kennzahl",
+        "composed": "Kombiniert",
+        "radar": "Radar",
+        "scatter": "Streuung",
         "x_axis": "X-Achse",
         "y_axis": "Y-Achsen",
         "label": "Beschriftung",
@@ -127,7 +140,52 @@
         "save_new": "Neu speichern",
         "success_save": "Widget gespeichert!",
         "success_update": "Widget aktualisiert!",
-        "error_save": "Fehler beim Speichern: "
+        "error_save": "Fehler beim Speichern: ",
+        "labels": "Beschriftungen",
+        "label_on": "AN",
+        "label_off": "AUS",
+        "select_column": "Spalte wählen...",
+        "add_y_axis": "Y-Achse hinzufügen",
+        "y_axes": "Y-Achsen",
+        "pivot": "Pivot-Tabelle",
+        "pivot_rows": "Zeilen",
+        "pivot_cols": "Spalten",
+        "pivot_measures": "Messwerte",
+        "pivot_add_row": "Zeile hinzufügen",
+        "pivot_add_col": "Spalte hinzufügen",
+        "pivot_add_measure": "Messwert hinzufügen",
+        "pivot_agg_sum": "Summe",
+        "pivot_agg_count": "Anzahl",
+        "pivot_agg_avg": "Mittelwert",
+        "pivot_agg_min": "Min",
+        "pivot_agg_max": "Max",
+        "kpi_rules": "KPI-Alerts / Schwellenwerte",
+        "add_rule": "Regel hinzufügen",
+        "rule_operator": "Operator",
+        "rule_value": "Wert",
+        "rule_color": "Farbe"
+    },
+    "reports": {
+        "title": "Berichtspakete",
+        "subtitle": "Erstellen und exportieren Sie mehrseitige Management-Berichte.",
+        "new_pack_name": "Neues Berichtspaket",
+        "pages": "Seiten",
+        "export_batch": "Export starten",
+        "add_page": "Seite hinzufügen",
+        "pack_settings": "Paket-Einstellungen",
+        "pick_content": "Inhalt auswählen",
+        "select_pack": "Bitte wählen Sie ein Paket",
+        "cover_page": "Deckblatt",
+        "author": "Autor",
+        "subtitle_label": "Untertitel",
+        "title_label": "Titel",
+        "toc": "Inhaltsverzeichnis",
+        "no_packages": "Keine Pakete",
+        "general": "Allgemein",
+        "pack_name_placeholder": "Paket Name",
+        "page": "Seite",
+        "generated_on": "Erstellt am",
+        "author_prefix": "Erstellt von"
     },
     "settings": {
         "title": "Einstellungen",
