--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,7 @@
         "database_status": "Database Status",
         "system_status": "System Status",
         "records_count": "{{count}}k Records",
+        "reports": "Report Packages",
         "about": "About"
     },
     "dashboard": {
@@ -57,7 +58,15 @@
         "delete_confirm": "Delete dashboard?",
         "empty_msg": "\"{{name}}\" is still empty",
         "empty_hint": "Add tiles to customize this dashboard.",
-        "confirm_delete_report": "Really delete this report?",
+        "confirm_delete_report": "Are you sure you want to remove this report from the dashboard?",
+        "filters_title": "Global Dashboard Filters",
+        "filters_subtitle": "Slicers that affect all dashboard charts simultaneously.",
+        "add_filter": "Add Filter",
+        "filter_column": "Column...",
+        "filter_value": "Value...",
+        "no_filters": "No active filters. Click 'Add Filter' to constrain the dashboard.",
+        "op_contains": "contains",
+        "op_is_null": "is empty",
         "pin_sidebar": "Add to menu",
         "unpin_sidebar": "Remove from menu",
         "active": "Active",
@@ -92,31 +101,35 @@
         "sql_error": "SQL Error"
     },
     "querybuilder": {
-        "subtitle": "Create SQL queries and visualizations.",
-        "new_report": "Create New",
-        "save_as_widget": "Save as Widget",
-        "update_widget": "Update",
-        "archive": "Archive",
-        "query": "Query",
-        "graph": "Graph",
-        "saved_reports": "Saved Reports",
-        "editing": "Editing: {{name}}",
+        "subtitle": "Create and visualize your own data queries.",
         "visual_builder": "Visual Builder",
         "direct_editor": "Direct Editor",
         "sql_query": "SQL Query",
         "apply": "Apply",
-        "graph_type": "Graph Type",
+        "preview": "Preview ({{count}} results)",
+        "graph_type": "Visualization Type",
+        "graph": "Graph",
+        "archive": "Archive",
         "table": "Table",
         "bar": "Bar",
         "line": "Line",
         "area": "Area",
         "pie": "Pie",
+        "kpi": "KPI",
+        "composed": "Composed",
+        "radar": "Radar",
+        "scatter": "Scatter",
         "x_axis": "X-Axis",
         "y_axis": "Y-Axis",
         "label": "Label",
         "value": "Value",
         "please_select": "Please select...",
-        "preview": "Preview ({{count}})",
+        "save_as_widget": "Save as Widget",
+        "update_widget": "Update Widget",
+        "new_report": "New Report",
+        "saved_reports": "Saved Reports",
+        "editing": "Editing: {{name}}",
+        "query": "Query",
         "focus": "Focus",
         "centered": "Centered",
         "no_data_prompt": "No data\nRun query",
@@ -127,7 +140,52 @@
         "save_new": "Save as New",
         "success_save": "Widget saved!",
         "success_update": "Widget updated!",
-        "error_save": "Error saving: "
+        "error_save": "Error saving: ",
+        "labels": "Labels",
+        "label_on": "ON",
+        "label_off": "OFF",
+        "select_column": "Select column...",
+        "add_y_axis": "Add Y-Axis",
+        "y_axes": "Y-Axes",
+        "pivot": "Pivot Table",
+        "pivot_rows": "Rows",
+        "pivot_cols": "Columns",
+        "pivot_measures": "Measures",
+        "pivot_add_row": "Add Row",
+        "pivot_add_col": "Add Column",
+        "pivot_add_measure": "Add Measure",
+        "pivot_agg_sum": "Sum",
+        "pivot_agg_count": "Count",
+        "pivot_agg_avg": "Average",
+        "pivot_agg_min": "Min",
+        "pivot_agg_max": "Max",
+        "kpi_rules": "KPI Alerts / Thresholds",
+        "add_rule": "Add Rule",
+        "rule_operator": "Operator",
+        "rule_value": "Value",
+        "rule_color": "Color"
+    },
+    "reports": {
+        "title": "Report Packages",
+        "subtitle": "Build and export multi-page management reports.",
+        "new_pack_name": "New Report Package",
+        "pages": "Pages",
+        "export_batch": "Start Export",
+        "add_page": "Add Page",
+        "pack_settings": "Package Settings",
+        "pick_content": "Select Content",
+        "select_pack": "Please select a package",
+        "cover_page": "Cover Page",
+        "author": "Author",
+        "subtitle_label": "Subtitle",
+        "title_label": "Title",
+        "toc": "Table of Contents",
+        "no_packages": "No Packages",
+        "general": "General",
+        "pack_name_placeholder": "Package Name",
+        "page": "Page",
+        "generated_on": "Generated on",
+        "author_prefix": "Author"
     },
     "settings": {
         "title": "Settings",
